# FindMe

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  README_CN.md  SETUP.md  SETUP_CN.md  auto-fortune.sh
src/: lib.rs  main.rs
src/controllers/: birth_fortune_controller.rs  language_controller.rs  mod.rs
src/models/: birth_date.rs  birth_fortune.rs  daily_fortune.rs  dev_pressure.rs  mod.rs
src/utils/: i18n.rs  mod.rs  user.rs
src/views/: birth_fortune_view.rs  daily_fortune_view.rs  dev_pressure_view.rs  mod.rs
tests/: cli.rs
