[package]
name = "martinrepo-findr"
version = "0.2.0"
edition = "2024"
authors = ["chi.xing2025@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/MartinRepo/FindR"
repository = "https://github.com/MartinRepo/FindR"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[lib]
name = "grrs"
path = "src/lib.rs"