[package]
name = "findme"
version = "0.4.0"
edition = "2021"
authors = ["chi.xing2025@gmail.com"]
license = "Apache-2.0"
description = "A tool to show daily tech work fortune"
readme = "README.md"
homepage = "https://github.com/MartinRepo/findme"
repository = "https://github.com/MartinRepo/findme"
keywords = ["cli", "fortune", "tech", "daily"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
colored = "2.0"
dirs = "5.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[lib]
name = "findme"
path = "src/lib.rs"

[[bin]]
name = "findme"
path = "src/main.rs"